--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 		<title>Purposeful learning labs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--<link rel="stylesheet" href="assets/css/main.css" />-->
+    <!--<link rel="stylesheet" href="assets/css/main.css" />-->
+    <link rel="stylesheet" href="/assets/css/sss.css" />
 	</head>
 	<body class="is-preload">
 
@@ -13,7 +14,7 @@
     </noscript>
  		<!-- Wrapper -->
      
-
+      
           <div id="app">
 
           </div>
@@ -25,5 +26,7 @@
         <script src="assets/js/browser.min.js"></script>
         <script src="assets/js/breakpoints.min.js"></script>
         <script src="assets/js/util.js"></script>
+        <script src="/assets/js/sss.min.js"></script>
+
   </body>
 </html>
